# refinement-types

./: .gitignore  Cargo.toml  README.md  array_stuff.lang  build.rs  runnable.lang
.cargo/: config.toml
examples/: array.lang  factorial.lang  fib.lang  first.lang  first.rs  string.lang
lang/: array_stuff.lang  basics.lang  day1.lang  heap.lang  linked.lang  runnable.lang  sum_vec3.lang
src/: cc.rs  desugar.rs  error.rs  heap_prop5.rs  lib.rs  lpi.rs  parse.rs  refinement.rs  solver.rs  uninit_rc.rs  untyped.rs
src/desugar/: types.rs  value.rs
src/gadt/: util.rs
src/parse/: code.lalrpop  desugar.rs  expr.rs  lexer.rs  types.rs
src/parse/desugar/: constraint.rs
src/refinement/: builtin.rs  constraint.rs  determined.rs  eval.rs  func_term.rs  heap.rs  parse.rs  parse_expr.rs  parse_typ.rs  subst.rs  subtyp.rs  term.rs  test.rs  typing.rs  unroll.rs  util.rs  verify.rs
