[package]
name = "structural_types"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[dependencies]
z3 = "0.12.1"
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
mimalloc = "0.1.39"
thiserror = "1.0.50"
miette = { git = "https://github.com/zkat/miette.git", rev = "7ff4f87", features = ["fancy-no-backtrace"] }

[build-dependencies]
lalrpop = "0.20"
