[package]
name = "structural_types"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[dependencies]
z3 = { git = "https://github.com/prove-rs/z3.rs", rev = "64cc930" }
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
mimalloc = "0.1.39"
thiserror = "1.0.50"
miette = { git = "https://github.com/LHolten/miette.git", rev = "997a3ea", features = ["fancy-no-backtrace"] }
indenter = "0.3.3"
logos = "0.13.0"

[build-dependencies]
lalrpop = "0.20"
